# gvsu-cis350-sporks

./: .gitignore  Cargo.toml  README.md  update-server.sh
.github/workflows/: python-app.yml  python.yml  rust.yml
artifacts/: diagrams.md
artifacts/gui-layout/concept/: schedule.html  slots.html  style.css  tasks.html
artifacts/gui-layout/concept/users/: info.html  list.html
artifacts/use_case_diagram/: use_case_diagram.drawio
docs/: MEETING.md  proposal.md  software_requirements_specification.md
meetings/: GVSU-CIS350-SPORKS-2025-09-16.md  GVSU-CIS350-SPORKS-2025-09-18.md  GVSU-CIS350-SPORKS-2025-10-14.md  GVSU-CIS350-SPORKS-2025-10-28.md  meeting.md
src/: README.md  concept.py  main.py  main.rs  math.rs
src/clt/: GUITests.py  README.md  functions.py  integration-tests.py  server.py  test_integration.py
src/cmdline/: Cargo.toml
src/cmdline/src/: lib.rs
src/srv/: Cargo.toml  README.md
src/srv/src/: algo.rs  data.rs  integration.rs  main.rs
src/srv/src/algo/: math.rs  mod.rs
src/srv/src/data/: mod.rs  pref.rs  rule.rs  skill.rs  slot.rs  task.rs  user.rs
tests/: test_integration.py
