[package]
name = "gvsu-cis350-sporks"
version = "0.1.0"
edition = "2024"

[dependencies]
# bitflags = "2.9.4"
chrono = { version = "0.4.42", features = ["serde"] }
colored = "3.0.0"
# csv = "1.3.1"
lexopt = "0.3.1"
miette = "7.6.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
