[package]
name = "gvsu-cis350-sporks"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
bitflags = "2.9.4"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive"] }
csv = "1.3.1"
daggy = { version = "0.9.0", features = ["serde-1", "stable_dag"] }
either = "1.15.0"
extension-traits = "2.0.1"
itertools = "0.14.0"
lexopt = "0.3.1"
memchr = "2.7.6"
miette = { version = "7.6.0", features = ["fancy", "syntect-highlighter"] }
num-traits = "0.2.19"
parking_lot = "0.12.5"
petgraph = "0.8.3"
pyo3 = "0.26.0"
quote = "1.0.41"
rustc-hash = "2.1.1"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
smallvec = "1.15.1"
strsim = "0.11.1"
strum = "0.27.2"
thiserror = "2.0.16"
tinyvec = "1.10.0"
tokio = "1.48.0"
toml = "0.9.8"
winnow = "0.7.13"
